--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,141 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+/* Custom Properties */
+:root {
+    --primary-color: #3195ff;
+    --secondary-color: #333;
+    --dark-color: #000;
+    --light-color: #f4f4f4;
+    --header-opacity: 0.7;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+body {
+    background-color: #d5d4d4;
+    /* background-color: #2b6a7ef7; */
+    color: #fff;
+}
+main {
+    min-height: 100vh;
+}
+.container {
+  max-width: 1100px;
+  margin: auto;
+}
+
+/* Navbar */
+.navbar {
+    /* background-color: var(--primary-color); */
+    background-color: rgb(5, 5, 5);
+    height: 70px;
+    width: 100%;
+    padding: 5px 20px;
+    margin-bottom: 50px;
+    position: fixed;
+    z-index: 10;
+    opacity: 0.8;
+}
+  
+.navbar img {
+    display: block;
+    width: 250px;
+    height: 60px;
+}
+  
+.navbar .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+  
+.navbar ul {
+    display: flex;
+}
+  
+.navbar ul a {
+    margin-left: 30px;
+    margin-top: 20px;
+}
+ul {
+    list-style-type: none;
+}
+  
+.navbar ul a:hover {
+    color: var(--primary-color);
+    border-bottom: 2px var(--primary-color) solid;
+}
+@media (max-width: 768px) {  
+  .nav-tool {
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      justify-content: center;
+      align-items: center;
+  }
+  .navbar {
+    height: 150px;
+  }
+  .navbar ul {
+    flex-direction: column-reverse;
+    gap: 15px;
+  }
+}
+
+.enlace{
+    @apply text-xl uppercase font-bold font-mono
+}
+
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+}
+
+.carousel img {
+  height: 300px;
+  padding: 30px;
+  margin: 40px;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.carousel a {
+  margin: 0 auto;
+}
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.5vw;
+  }
+}
+
+
+/* Product Card */
+.product-buttons {
+  @apply flex items-center justify-center py-3 px-5 space-x-3 text-secondaryColor
+   border-lightColor rounded-lg shadow-sm hover:shadow-lg hover:-translate-y-0.5 transition-all 
+   duration-150 bg-lightColor font-mono hover:bg-buttonColor hover:text-lightColor
+}
+
+/* Footer */
+.footerEnlces {
+    @apply uppercase hover:text-[#333] hover:border-b-2 hover:border-b-[#333] border-b-2 border-b-[#3195ff]
+}
