--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,11 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
+
 
 /* Custom Properties */
 :root {
@@ -17,17 +13,12 @@
     --header-opacity: 0.7;
 }
 
-html {
-    scroll-behavior: smooth;
-}
 body {
     background-color: #d5d4d4;
     /* background-color: #2b6a7ef7; */
     color: #fff;
 }
-main {
-    min-height: 100vh;
-}
+
 .container {
   max-width: 1100px;
   margin: auto;
@@ -37,10 +28,10 @@ main {
 .navbar {
     /* background-color: var(--primary-color); */
     background-color: rgb(5, 5, 5);
-    height: 70px;
+    /* height: 70px; */
     width: 100%;
-    padding: 5px 20px;
-    margin-bottom: 50px;
+    padding: 10px 20px;
+    /* margin-bottom: 50px; */
     position: fixed;
     z-index: 10;
     opacity: 0.8;
@@ -52,11 +43,7 @@ main {
     height: 60px;
 }
   
-.navbar .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+
   
 .navbar ul {
     display: flex;
@@ -92,37 +79,6 @@ ul {
     @apply text-xl uppercase font-bold font-mono
 }
 
-/* carousel */
-.carousel-item-next,
-.carousel-item-prev,
-.carousel-item.active {
-  display: flex;
-}
-.carousel-caption {
-  position: absolute;
-  top: 0;
-}
-
-.carousel-caption h2 {
-  color: #fff;
-}
-
-.carousel img {
-  height: 300px;
-  padding: 30px;
-  margin: 40px;
-  border-radius: 50%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.carousel a {
-  margin: 0 auto;
-}
-@media (max-width: 900px) {
-  .carousel-caption h2 {
-    font-size: 2.5vw;
-  }
-}
 
 
 /* Product Card */
